<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/label_menu_new_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/label_menu_forum"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/label_menu_remove_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/label_menu_new_classroom"
        app:showAsAction="never" />
</menu>